Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-35253

innodb.xa_prepare_unlock_unmodified fails in UBSAN

    XMLWordPrintable

Details

    Description

      innodb.xa_prepare_unlock_unmodified      w2 [ fail ]  Found warnings/errors in server log file!
              Test ended at 2024-10-23 14:55:54
      line
      /home/buildbot/buildbot/build/mariadb-10.6.20/sql/sql_select.cc:8289:43: runtime error: shift exponent 32 is too large for 32-bit type 'unsigned int'
      ^ Found warnings in /dev/shm/var/2/log/mysqld.1.err
      ok
       
       - saving '/dev/shm/var/2/log/innodb.xa_prepare_unlock_unmodified/' to '/dev/shm/var/log/innodb.xa_prepare_unlock_unmodified/'
       
      Retrying test innodb.xa_prepare_unlock_unmodified, attempt(2/2)...
      

      Attachments

        Activity

          People

            psergei Sergei Petrunia
            sanja Oleksandr Byelkin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: