MDEV-35253: xa_prepare_unlock_unmodified fails ... : part 2

instead of our own prev_bits(), make use of my_set_bits().